@@ -2,7 +2,7 @@
 #  Makefile for GXemul src/main/fileloaders
 #
 
-CXXFLAGS=$(CXXWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
+CXXFLAGS=$(CWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
 LIBS=$(OTHERLIBS)
 
 OBJS=FileLoader_ELF.o
