@@ -2,7 +2,7 @@
 #  Makefile for GXemul src/ui/console
 #
 
-CXXFLAGS=$(CXXWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
+CXXFLAGS=$(CWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
 LIBS=$(OTHERLIBS)
 
 OBJS=ConsoleUI.o
